<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMetS</string>
    <string name="details_info">Sensor Information</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_device">Add...</string>
    <string name="action_delete_device">Delete</string>
    <string name="title_activity_details">Sensor details</string>
    <string name="phone_number">Phone Number</string>
    <string name="device_description">Description</string>
    <string name="device_model">Model</string>
    <string name="save_device">Save</string>
    <string name="tabDetails">Details</string>
    <string name="tabLogHistory">History</string>
    <string name="tabCommands">Commands</string>
    <string name="sensors">Registered Sensors</string>
</resources>
